--- a/src/components/my-button/my-button.module.css
+++ b/src/components/my-button/my-button.module.css
@@ -20,7 +20,7 @@
 /*   1. Primary Button */
 /* =================== */
 .buttonPrimary {
-  background-color: #007bff; /* Primary Blue */
+  background-color: #4114f1; /* Primary Blue */
   color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
